k8s/local-stack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vista-monte-mar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: vista-monte-mar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        - name: postgres-init-sql
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-data
      - name: postgres-init-sql
        configMap:
          name: postgres-init-sql
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: vista-monte-mar
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: vista-monte-mar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: jmalab24/vista-monte-mar-be:dev
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8135
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: vista-monte-mar
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - port: 8135
    targetPort: 8135
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: vista-monte-mar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: jmalab24/vista-monte-mar-app:dev
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: vista-monte-mar
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 80
