k8s/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-web
  namespace: vista-monte-mar
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: vmm.localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 8135
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-websecure
  namespace: vista-monte-mar
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - vmm.localhost
    secretName: vmm-localhost-tls
  rules:
  - host: vmm.localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 8135
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 80
